// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the tooltip component hides itself upon mouse enter 1`] = `
<div
  class="wrapper top invisible"
  id="test-tooltip"
  role="tooltip"
  style="left: 0px; top: -15px;"
>
  <div
    class="top invisible"
    style="visibility: hidden;"
  >
    <div
      class="top invisible"
    >
      <div
        style="background-color: rgb(34, 34, 34);"
      >
        hello
      </div>
    </div>
    <div
      class="arrow top invisible"
      style="border-top-color: #222222;"
    />
  </div>
</div>
`;

exports[`the tooltip component hides itself upon parent mouse leave 1`] = `
<div
  class="wrapper top invisible"
  id="test-tooltip"
  role="tooltip"
  style="left: 0px; top: -15px;"
>
  <div
    class="top invisible"
    style="visibility: hidden;"
  >
    <div
      class="top invisible"
    >
      <div
        style="background-color: rgb(34, 34, 34);"
      >
        hello
      </div>
    </div>
    <div
      class="arrow top invisible"
      style="border-top-color: #222222;"
    />
  </div>
</div>
`;

exports[`the tooltip component renders as expected 1`] = `
<div
  className="wrapper top invisible"
  id="test-tooltip"
  onMouseEnter={[Function]}
  role="tooltip"
  style={Object {}}
>
  <div
    className="top invisible"
    style={
      Object {
        "visibility": "hidden",
      }
    }
  >
    <div
      className="top invisible"
      style={Object {}}
    >
      <div
        style={
          Object {
            "backgroundColor": "#222222",
          }
        }
      >
        hello
      </div>
    </div>
    <div
      className="arrow top invisible"
      style={
        Object {
          "borderTopColor": "#222222",
        }
      }
    />
  </div>
</div>
`;

exports[`the tooltip component shows itself by default if sticky is enabled 1`] = `
<div
  class="wrapper top visible"
  id="test-tooltip"
  role="tooltip"
  style="left: 0px; top: -15px;"
>
  <div
    class="top visible"
    style="visibility: visible;"
  >
    <div
      class="top visible"
    >
      <div
        style="background-color: rgb(34, 34, 34);"
      >
        hello
      </div>
    </div>
    <div
      class="arrow top visible"
      style="border-top-color: #222222;"
    />
  </div>
</div>
`;

exports[`the tooltip component shows itself upon parent mouse enter 1`] = `
<div
  class="wrapper top visible"
  id="test-tooltip"
  role="tooltip"
  style="left: 0px; top: -15px;"
>
  <div
    class="top visible"
    style="visibility: visible;"
  >
    <div
      class="top visible"
    >
      <div
        style="background-color: rgb(34, 34, 34);"
      >
        hello
      </div>
    </div>
    <div
      class="arrow top visible"
      style="border-top-color: #222222;"
    />
  </div>
</div>
`;
